feature(schema utils): refactor and fix complex schema lists and enums; fix unit tests